--- a/gulp-cli/package.json
+++ b/gulp-cli/package.json
@@ -24,7 +24,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-rev": "^9.0.0",
     "gulp-rev-collector": "^1.3.3",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass-china": "^3.1.0",
     "gulp-uglify": "^3.0.2"
   }
 }
